--- a/Bio.html
+++ b/Bio.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ceviche+One&family=Fruktur&family=Zen+Kurenaido&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
   <style>
   .fakeimg {
@@ -23,6 +26,7 @@ body {
 
 .container {
   padding: 64px;
+  
 }
 
 .row:after {
@@ -40,16 +44,6 @@ body {
 .column-33 {
   float: left;
   width: 33.33333%;
-  padding: 20px;
-}
-.column-45 {
-  float: left;
-  width: 66.6666%;
-  padding: 20px;
-}
-.column-75 {
-  float: left;
-  width: 33.3333%;
   padding: 20px;
 }
 
@@ -76,6 +70,7 @@ img {
   max-width: 100%;
 }
 
+
 @media screen and (max-width: 1000px) {
   .column-66,
   .column-33 {
@@ -91,9 +86,9 @@ img {
 <body>
 
 <div class="p-5 bg-primary text-white text-center">
-  <h1>Veena Puttalingaiah!</h1>
-  <p>Dream as if you’ll live forever. Live as if you’ll die today. -James Dean</p>
- </div>
+  <h1 style="font-family: 'Fruktur', cursive; font-size: 3em">Veena Puttalingaiah </h1>
+  <p style="font-family: 'Zen Kurenaido', sans-serif; font-size: 2em">Dream as if you’ll live forever. Live as if you’ll die today. - James Dean</p>
+</div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
@@ -147,32 +142,40 @@ img {
     <div class="row">
       
         <h1 class="xlarge-font"><b>Technical Skills</b></h1>
-        <p style="text-align: left;font-weight: normal;">
-            <Strong>Operating Systems: </Strong>
-            z/OS 1.4 – 2.3, Linux, Windows <br>
-
-            <Strong>Databases: </Strong>
-            Db2 on z/OS V7-V12, DB2 LUW V8-9, IMS DB, VSAM, Oracle<br>
-
-            <Strong>Programming Languages: </Strong>
-            COBOL, JCL, REXX, CLIST, PLI, Assembler, XML, Java, C, C++, HTML, CSS, NodeJS <br>
-
-            <Strong>Middleware: </Strong>
-            MQ, CICS <br>
-
-            <Strong>Replication Products: </Strong>
-            QRep, SQLREP, Golden gate on z <br>
-
-            <Strong>Monitoring Products:</Strong>
-            Splunk, Dynatrace, Omegamon, Apptune, Tivoli Enterprise Portal, IZSME <br>
-
-            <Strong>Other Technologies:</Strong>
-            IBM Db2 Analytics Accelerator, Docker, Kubernetes, ZOWE, zOSMF <br>
-
-            <Strong>Other Tools:</Strong>
-            Topaz, Data Studio, QMF for Workstation/WebSphere, BMC Utilities, IBM Utilities, Xpediter, Control M, Log Master, Service Now, Manage Now <br>
-         </p>
-      
+        <div class="container-sm">
+          <div class="row border">
+                  <div class="col-sm-3 "> <Strong>Operating Systems: </Strong></div>
+                  <div class="col-sm-8 text-primary">z/OS 1.4 – 2.3, Linux, Windows</div>
+          </div> 
+          <div class="row border">
+                  <div class="col-sm-3"> <Strong>Databases: </Strong></div>
+                  <div class="col-sm-8 text-primary"> Db2 on z/OS V7-V12, DB2 LUW V8-9, IMS DB, VSAM, Oracle</div>
+          </div>
+          <div class="row border">
+            <div class="col-sm-3"> <Strong>Programming Languages: </Strong></div>
+            <div class="col-sm-8 text-primary"> COBOL, JCL, REXX, CLIST, PLI, Assembler, XML, Java, C, C++, HTML, CSS, JavaScript </div>
+          </div>
+          <div class="row border">
+            <div class="col-sm-3"> <Strong>Middleware: </Strong></div>
+            <div class="col-sm-8 text-primary"> MQ, CICS</div>
+          </div>
+          <div class="row border">
+            <div class="col-sm-3"> <Strong>Replication Products: </Strong></div>
+            <div class="col-sm-8 text-primary"> QRep, SQLREP, Golden gate on z </div>
+          </div>
+          <div class="row border">
+            <div class="col-sm-3"> <Strong>Monitoring Products: </Strong></div>
+            <div class="col-sm-8 text-primary"> Splunk, Dynatrace, Omegamon, Apptune, Tivoli Enterprise Portal, IZSME </div>
+          </div>
+          <div class="row border">
+            <div class="col-sm-3"> <Strong>Other Technologies: </Strong></div>
+            <div class="col-sm-8 text-primary"> IBM Db2 Analytics Accelerator, Docker, Kubernetes, ZOWE, zOSMF</div>
+          </div>
+          <div class="row border">
+            <div class="col-sm-3"> <Strong>Other Tools: </Strong></div>
+            <div class="col-sm-8 text-primary"> Topaz, Data Studio, QMF for Workstation/WebSphere, BMC Utilities, IBM Utilities, Xpediter, Control M, Log Master, Service Now, Manage Now</div>
+          </div>
+        </div>
     </div>
   </div>
   
