Added Travel photo

--- a/Bio.html
+++ b/Bio.html
@@ -10,78 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ceviche+One&family=Fruktur&family=Zen+Kurenaido&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
-  .fakeimg {
-    height: 200px;
-    background: #aaa;
-  }
-  * {
-  box-sizing:border-box;
-}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.container {
-  padding: 64px;
-  
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both
-}
-
-.column-66 {
-  float: left;
-  width: 66.66666%;
-  padding: 20px;
-}
-
-.column-33 {
-  float: left;
-  width: 33.33333%;
-  padding: 20px;
-}
-
-.large-font {
-  font-size: 48px;
-}
-
-.xlarge-font {
-  font-size: 64px
-}
-
-.button {
-  border: none;
-  color: white;
-  padding: 14px 28px;
-  font-size: 16px;
-  cursor: pointer;
-  background-color: #04AA6D;
-}
-
-img {
-  display: block;
-  height: auto;
-  max-width: 100%;
-}
-
-
-@media screen and (max-width: 1000px) {
-  .column-66,
-  .column-33 {
-    width: 100%;
-    text-align: center;
-  }
-  img {
-    margin: auto;
-  }
-}
-  </style>
+  <link href="./styles.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -182,10 +111,13 @@ img {
 <!-- Hobbies Section -->
 <div class="container" style="background-color:#f1f1f1">
     <div class="row">
-    
+    <div class="column-66">
     <h1 class="xlarge-font"><b>Interests</b></h1>
     <p><span style="font-size:16px">I love traveling, photographing nature & wildlife, hiking, biking, and more.</span> 
      </p>
+    </div>
+     <div class="column-33"><img src="Travel.jpg" width="350" height="530"></div>
+  
     </div>
   </div>
 
