--- a/Bio.html
+++ b/Bio.html
@@ -41,7 +41,7 @@
       <div class="column-66">
         <h1 class="xlarge-font"><b>Bio</b></h1>
         <h1 class="medium-font" style="color:MediumSeaGreen;"><b>Professional Summary</b></h1>
-        <p>I am a highly motivated Mainframe Specialist with 14+ years of experience in Application development, Database Administration, Infrastructure Engineering and Operations. A continuous learner who is passionate and committed to the organizational growth and focused on delivering exceptional results. </p>
+        <p>I am a highly motivated Mainframe Specialist with 17+ years of experience in Application development, Database Administration, Infrastructure Engineering and Operations. A continuous learner who is passionate and committed to the organizational growth and focused on delivering exceptional results. </p>
         <h2>
             <a href="https://www.linkedin.com/in/veena-puttalingaiah-19115216"><i class="bi bi-linkedin"></i></a>
             <a href="mailto:veenabp@gmail.com"><i class="bi bi-envelope"></i></a>
@@ -58,8 +58,12 @@
   <div class="container" style="background-color:#f1f1f1">
     <div class="row">
     <h1 class="xlarge-font"><b>Education</b></h1>
-    <p><li><span style="font-size:16px">Master of Science in Computer Science, Colorado Technical University.</span> </li>
-    <li><span style="font-size:16px">Bachelor of Engineering, Electronics & Communication, Visveswaraya Technological University.</span></li> </p>
+    <p>
+     <li><span style="font-size:16px">Designing and Building AI Products and Services, 2024. </span></li> 
+    <li><span style="font-size:16px">Professional Certificate in Coding: Full Stack Development with MERN, 2022. </span></li>
+    <li><span style="font-size:16px">Master of Science in Computer Science, Colorado Technical University.</span> </li>
+    <li><span style="font-size:16px">Bachelor of Engineering, Electronics & Communication, Visveswaraya Technological University.</span></li> 
+    </p>
     </div>
   </div>
   
@@ -74,11 +78,11 @@
           </div> 
           <div class="row border">
                   <div class="col-sm-3"> <Strong>Databases: </Strong></div>
-                  <div class="col-sm-8 text-primary"> Db2 on z/OS V7-V12, DB2 LUW V8-9, IMS DB, VSAM, Oracle</div>
+                  <div class="col-sm-8 text-primary"> Db2 on z/OS V7-V12, DB2 LUW V8-9, IMS DB, VSAM, Oracle, PostgreSQL, MongoDB</div>
           </div>
           <div class="row border">
             <div class="col-sm-3"> <Strong>Programming Languages: </Strong></div>
-            <div class="col-sm-8 text-primary"> COBOL, JCL, REXX, CLIST, PLI, Assembler, XML, Java, C, C++, HTML, CSS, JavaScript </div>
+            <div class="col-sm-8 text-primary"> COBOL, JCL, REXX, CLIST, PLI, Assembler, XML, Java, C, C++, HTML, CSS, JavaScript, Python </div>
           </div>
           <div class="row border">
             <div class="col-sm-3"> <Strong>Middleware: </Strong></div>
@@ -90,11 +94,15 @@
           </div>
           <div class="row border">
             <div class="col-sm-3"> <Strong>Monitoring Products: </Strong></div>
-            <div class="col-sm-8 text-primary"> Splunk, Dynatrace, Omegamon, Apptune, Tivoli Enterprise Portal, IZSME </div>
+            <div class="col-sm-8 text-primary"> Splunk, Dynatrace, Omegamon, Apptune, Tivoli Enterprise Portal, IZSME, Fluentd/OpenSearch Dashboards, Grafana </div>
+          </div>
+          <div class="row border">
+            <div class="col-sm-3"> <Strong>Devops & DevSecops: </Strong></div>
+            <div class="col-sm-8 text-primary"> Artifact management with Artifactory & Nexus RM, Vulnerability management, Software Composition Analysis, Github, Github Actions</div>
           </div>
           <div class="row border">
             <div class="col-sm-3"> <Strong>Other Technologies: </Strong></div>
-            <div class="col-sm-8 text-primary"> IBM Db2 Analytics Accelerator, Docker, Kubernetes, ZOWE, zOSMF</div>
+            <div class="col-sm-8 text-primary"> IBM Db2 Analytics Accelerator, Docker, Kubernetes, ZOWE, zOSMF, NGINX / Apache for Load balancing and reverse proxy</div>
           </div>
           <div class="row border">
             <div class="col-sm-3"> <Strong>Other Tools: </Strong></div>
@@ -109,7 +117,7 @@
     <div class="row">
     <div class="column-66">
     <h1 class="xlarge-font"><b>Interests</b></h1>
-    <p><span style="font-size:16px">I love traveling, photographing nature & wildlife, hiking, biking, and more.</span> 
+    <p><span style="font-size:16px">I love traveling, yoga, photographing nature & wildlife, hiking, biking, and more.</span> 
      </p>
     </div>
      <div class="column-33"><img src="Travel.jpg" width="350" height="530"></div>
